--- a/hamminga/code/contact.html
+++ b/hamminga/code/contact.html
@@ -18,15 +18,15 @@
     <h1>Hamminga Bouw & Tuinmarkt BV</h1>
     <hr>
     </div>
-<div class="wtfisthis" style="margin-left: 86vh;">
+<div class="wtfisthis" style="margin-left: 76.5vh;">
     <div class="data">
-        name<br>
-        #number
+        een tweede ezel<br>
+        #29419192913
     </div>
     <div class="vertical-line"><span></span></div>
     <div class="data">
-        name<br>
-        #number
+        hallo daar ezel<br>
+        914919239131
     </div>
     </div>
 <br>
