--- a/hamminga/code/about.html
+++ b/hamminga/code/about.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <title>
-        //
+        Hamminga // About
     </title>
 </head>
 <body>
