--- a/hamminga/code/index.html
+++ b/hamminga/code/index.html
@@ -18,7 +18,7 @@
     <h1>Hamminga Bouw & Tuinmarkt BV</h1>
     <hr>
     <p> Wij staan al 35 jaar voor u klaar. U kunt bij ons terecht voor al uw bouw- en tuin materiaal, maar ook voor verhuur en reparatie!</p>
-    <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Contact</a></div>
+    <a href="./contact.html" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Contact</a></div>
 </body>
 <footer>
     Hamminga Bouw- en Tuinmarkt B.V.
