--- a/hamminga/code/contact.html
+++ b/hamminga/code/contact.html
@@ -18,24 +18,41 @@
     <h1>Hamminga Bouw & Tuinmarkt BV</h1>
     <hr>
     </div>
-<div class="wtfisthis" style="margin-left: 76.5vh;">
+<div class="wtfisthis" style="margin-left: 87vh;">
     <div class="data">
-        een tweede ezel<br>
+        <b>Directie</b><br>
         #29419192913
+        <br>
+        <hr>
+        <b>Management</b><br>
+        123445
+        <hr>
     </div>
-    <div class="vertical-line"><span></span></div>
     <div class="data">
-        hallo daar ezel<br>
+        <b>Supervisors</b><br>
         914919239131
+        <br>
+        <hr>
+       <b>Medewerkers</b><br>
+        123445
+        <br>
+        <hr>
+        <b>Receptie</b><br>
+        123445
+
     </div>
     </div>
+    
 <br>
 <br>
 <br>
 <br>
 <br>
-<p style="margin-left: 82vh">Ook zijn wij bereikbaar via mail.</p>
-    <a href="mailto:admin@admin.com" class="btn btn-primary btn-sm active" role="button" aria-pressed="true" style="margin-left: 94vh;">Mail ons!</a>
+<br>
+<br>
+<br>
+<p style="margin-left: 87vh; margin-top: 5vh;">Ook zijn wij bereikbaar via mail.</p>
+    <a href="mailto:admin@admin.com" class="btn btn-primary btn-sm active" role="button" aria-pressed="true" style="margin-left: 98vh;">Mail ons!</a>
 </body>
 <footer>
     Hamminga Bouw- en Tuinmarkt B.V.
